# CSAI

./: LICENSE  Makefile  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  server.yml
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/chat/: memory.py  router.py  schemas.py  service.py
backend/tests/: test_chat_api.py  test_chat_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx
frontend/src/services/: chatService.ts
frontend/src/types/: chat.ts
